
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


typedef int uint8_t ;
typedef int uint16_t ;
struct TYPE_8__ {scalar_t__ enable_led_scheme; } ;
struct qla_hw_data {int* fw_options; int* fw_seriallink_options; TYPE_1__ flags; } ;
struct TYPE_9__ {struct qla_hw_data* hw; } ;
typedef TYPE_2__ scsi_qla_host_t ;


 int BIT_0 ;
 int BIT_1 ;
 int BIT_12 ;
 int BIT_13 ;
 int BIT_2 ;
 int BIT_3 ;
 int BIT_4 ;
 int BIT_5 ;
 int BIT_6 ;
 int BIT_7 ;
 int FO1_SET_EMPHASIS_SWING ;
 scalar_t__ IS_QLA2100 (struct qla_hw_data*) ;
 scalar_t__ IS_QLA2200 (struct qla_hw_data*) ;
 scalar_t__ IS_QLA2300 (struct qla_hw_data*) ;
 scalar_t__ IS_QLA2312 (struct qla_hw_data*) ;
 scalar_t__ IS_QLA2322 (struct qla_hw_data*) ;
 scalar_t__ IS_QLA6312 (struct qla_hw_data*) ;
 scalar_t__ IS_QLA6322 (struct qla_hw_data*) ;
 int memset (int*,int ,int) ;
 int ql_dbg (scalar_t__,TYPE_2__*,int,char*) ;
 scalar_t__ ql_dbg_buffer ;
 scalar_t__ ql_dbg_init ;
 int ql_dump_buffer (scalar_t__,TYPE_2__*,int,int *,int) ;
 int qla2x00_get_fw_options (TYPE_2__*,int*) ;
 int qla2x00_set_fw_options (TYPE_2__*,int*) ;

void
qla2x00_update_fw_options(scsi_qla_host_t *vha)
{
 uint16_t swing, emphasis, tx_sens, rx_sens;
 struct qla_hw_data *ha = vha->hw;

 memset(ha->fw_options, 0, sizeof(ha->fw_options));
 qla2x00_get_fw_options(vha, ha->fw_options);

 if (IS_QLA2100(ha) || IS_QLA2200(ha))
  return;


 ql_dbg(ql_dbg_init + ql_dbg_buffer, vha, 0x0115,
     "Serial link options.\n");
 ql_dump_buffer(ql_dbg_init + ql_dbg_buffer, vha, 0x0109,
     (uint8_t *)&ha->fw_seriallink_options,
     sizeof(ha->fw_seriallink_options));

 ha->fw_options[1] &= ~FO1_SET_EMPHASIS_SWING;
 if (ha->fw_seriallink_options[3] & BIT_2) {
  ha->fw_options[1] |= FO1_SET_EMPHASIS_SWING;


  swing = ha->fw_seriallink_options[2] & (BIT_2 | BIT_1 | BIT_0);
  emphasis = (ha->fw_seriallink_options[2] &
      (BIT_4 | BIT_3)) >> 3;
  tx_sens = ha->fw_seriallink_options[0] &
      (BIT_3 | BIT_2 | BIT_1 | BIT_0);
  rx_sens = (ha->fw_seriallink_options[0] &
      (BIT_7 | BIT_6 | BIT_5 | BIT_4)) >> 4;
  ha->fw_options[10] = (emphasis << 14) | (swing << 8);
  if (IS_QLA2300(ha) || IS_QLA2312(ha) || IS_QLA6312(ha)) {
   if (rx_sens == 0x0)
    rx_sens = 0x3;
   ha->fw_options[10] |= (tx_sens << 4) | rx_sens;
  } else if (IS_QLA2322(ha) || IS_QLA6322(ha))
   ha->fw_options[10] |= BIT_5 |
       ((rx_sens & (BIT_1 | BIT_0)) << 2) |
       (tx_sens & (BIT_1 | BIT_0));


  swing = (ha->fw_seriallink_options[2] &
      (BIT_7 | BIT_6 | BIT_5)) >> 5;
  emphasis = ha->fw_seriallink_options[3] & (BIT_1 | BIT_0);
  tx_sens = ha->fw_seriallink_options[1] &
      (BIT_3 | BIT_2 | BIT_1 | BIT_0);
  rx_sens = (ha->fw_seriallink_options[1] &
      (BIT_7 | BIT_6 | BIT_5 | BIT_4)) >> 4;
  ha->fw_options[11] = (emphasis << 14) | (swing << 8);
  if (IS_QLA2300(ha) || IS_QLA2312(ha) || IS_QLA6312(ha)) {
   if (rx_sens == 0x0)
    rx_sens = 0x3;
   ha->fw_options[11] |= (tx_sens << 4) | rx_sens;
  } else if (IS_QLA2322(ha) || IS_QLA6322(ha))
   ha->fw_options[11] |= BIT_5 |
       ((rx_sens & (BIT_1 | BIT_0)) << 2) |
       (tx_sens & (BIT_1 | BIT_0));
 }



 ha->fw_options[3] |= BIT_13;


 if (ha->flags.enable_led_scheme)
  ha->fw_options[2] |= BIT_12;


 if (IS_QLA6312(ha))
  ha->fw_options[2] |= BIT_13;


 qla2x00_set_fw_options(vha, ha->fw_options);
}
